--- a/занятие 2/Выполненные задания/list2.html
+++ b/занятие 2/Выполненные задания/list2.html
@@ -1,23 +1,27 @@
 <HTML>
- <HEAD>
-  <TITLE>Использование маркированных списков</title>
- </HEAD>
+<HEAD>
+<TITLE>Использование маркированных списков</title>
+</HEAD>
 <BODY>
-<H2> <font color="violet">Язык разметки гипертекста HTML</H2>
- <HR color=#B7277F size=5>
- <font color="black" size=+1>
-  <p>В данном разделе мы изучаем следующие темы:</p>
- <font size=-1>
-  <UL type="circle">
-  <LI>Основные принципы HTML</LI>
-  <LI>Абзацы, специальные символы</LI>
-  <LI>Форматирование</LI>
-  <LI>Списки</LI>
-  <LI>Гиперссылки</LI>
-  <LI>Таблицы</LI>
-  <LI>Графика</LI>
-  <LI>Формы</LI>
-  <LI>Фреймы</LI>
- </UL>
+	<H2><Font color="violet">Язык разметки гипертекста HTML</H2>
+	<HR color=#b7277f size=5>
+	<Font color="black" size=+1>
+	<p>В данном разделе мы изучаем следующие темы:</p>
+	<font size=-1>
+		<ul type="circle">
+		<LI>Основные принципы HTML
+		<LI>Абзацы, специальные символы
+		<LI>Форматирование
+		<LI>Списки
+			<ul type="square">
+			<LI><b>Нумерованные</b>
+			<LI><b>Маркированные</b>
+			<LI><b>Списки определений</b>
+			</ul>
+		<LI>Гиперссылки
+		<LI>Таблицы
+		<LI>Графика
+		<LI>Формы
+		<LI>Фреймы
+		</ul>
 </BODY>
-</HTML>
