--- a/Занятие 3/new 1.html
+++ b/Занятие 3/new 1.html
@@ -1,20 +1,26 @@
 <HTML>
-<HEAD>
-<TITLE>Организация графических гиперссылок</title>
-</HEAD>
-<BODY background="Texture/WB7.gif">
+	<HEAD>
+		<TITLE>Организация графических гиперссылок</title>
+	</HEAD>
+	<BODY background="Texture/WB7.gif">
+	
+	
 <H1 align=center><font color=#4F584D>Колледж де Бург</H1>
 <font color="black">
-<IMG SRC="Images/AG4.gif" width=100% height=3>
+<IMG SRC=Images/AG4.gif width=100% height=3>
+<p><a href="images/parikm.jpg"><img src="images/parikm1.jpg" border=0 hspace=20 vspace=5 
+alt="Увеличить изображение" align=middle title="Увеличить изображение"></a>
+<a href="images/stolar.jpg"><img src="images/stolar1.jpg" border=0 hspace=65 vspace=5 
+alt="Увеличить изображение" align=middle title="Увеличить изображение"></a></p>
+<p>Кабинет по специальности "Парикмахер"&nbsp&nbsp&nbsp&nbsp&nbsp&nbspКабинет по специальности "Столяр"</p>
 <HR>
-<P><A HREF="Images/Parikm.jpg"><IMG SRC="Images/Parikm1.jpg" border=0 hspace=20 vspace=5 alt="Увеличить изображение"></A>
-<A HREF="Images/Stolar.jpg"><IMG SRC="Images/Stolar1.jpg" border=0 hspace=65 vspace=5 alt="Увеличить изображение"></A></P>
-<P>Кабинет по специальности "Парикмахер"&nbsp&nbsp&nbsp&nbsp&nbsp&nbspКабинет по специальности "Столяр"</P>
-</HR>
+<p><a href="images/Slesar.jpg"><img src="images/Slesar1.jpg" border=0 hspace=20 vspace=5 
+alt="Увеличить изображение" align=middle title="Увеличить изображение"></a>
+<a href="images/Compclass.jpg"><img src="images/Compclass1.jpg" border=0 hspace=65 vspace=5 
+alt="Увеличить изображение" align=middle title="Увеличить изображение"></a></p>
+Кабинет по специальности<br>
+"Слесарь механо-сборачных работ"&nbsp&nbsp&nbsp&nbsp&nbsp&nbspКабинет по специальности "Пользователь ПЭВМ"
 <HR>
-<P><A HREF="Images/Slesar.jpg"><IMG SRC="Images/Slesar1.jpg" border=0 hspace=20 vspace=5 alt="Увеличить изображение"></A>
-<A HREF="Images/Compclass.jpg"><IMG SRC="Images/Compclass1.jpg" border=0 hspace=65 vspace=5 alt="Увеличить изображение"></A></P>
-<P>Кабинет по специальности "Слесарь механо-сборочных работ"&nbsp&nbsp&nbsp&nbsp&nbsp&nbspКабинет по специальности "Пользователь ПЭВМ"</P>
-</HR>
+
 </BODY>
 </HTML>
