--- a/занятие 2/link2.html
+++ b/занятие 2/link2.html
@@ -4,7 +4,7 @@
 <A href="mailto:v.fufaev@niks.by">Написать Виталию Валентиновичу</a>
 <p><A href="01.jpg">Рыбка</a></p>
 <p><A href="01.doc">Документ с картинкой</a></p>
-<p><A href="https://www.microsoft.com/">FTP-сервер компании Microsoft</a></p>
+<p><A href="ftp://ftp.microsoft.com/">FTP-сервер компании Microsoft</a></p>
 </HEAD>
 <BODY>
 </BODY>
