--- a/занятие 2/Выполненные задания/link1.html
+++ b/занятие 2/Выполненные задания/link1.html
@@ -1,10 +1,15 @@
 <HTML>
 <HEAD>
 <TITLE>Организация ссылок на другие ресурсы.</title>
-<p><A href="https://www.yandex.ru/">Яндекс-Рунет</a></p>
-<p><A href="https://www.rambler.ru/">Рамблер-Рунет</a></p>
-<p><A href="https://www.aport.ru/">Апорт-Рунет</a></p>
-<p><A href="https://www.akavita.com/">Акавита-Рунет</a></p>
+<center>
+<H2>Поисковые системы</H2>
+</center>
+<HR color=Silver size=5>
+ <ul type="circle">
+<li><p><A href="https://www.yandex.ru/">Яндекс-Рунет</a></p>
+<li><p><A href="https://www.rambler.ru/">Рамблер-Рунет</a></p>
+<li><p><A href="https://www.aport.ru/">Апорт-Рунет</a></p>
+<li><p><A href="https://www.akavita.com/">Акавита-Рунет</a></p>
 </HEAD>
 <BODY>
 </BODY>
