--- a/занятие 2/AI_1.htm
+++ b/занятие 2/AI_1.htm
@@ -3,21 +3,17 @@
 <TITLE>Adobe Illustrator: первые шаги. Урок 1</TITLE>
 <META charset=windows-1251"></HEAD>
 <BODY bgcolor=#D8E7F4>
-<p><a href="ai_1.htm">Урок 1 </a> | <a href="ai_2.htm">Урок 2 </a>| <a href="ai_3.htm">Урок 3 </a>| <a href="ai_4.htm">Урок 4 </a> </p>
-<a href="ai_1.htm" target="_blank">Урок 1 </a>
-<a href="ai_2.htm" target="_blank">Урок 2 </a>
-<a href="ai_3.htm" target="_blank">Урок 3 </a>
-<a href="ai_4.htm" target="_blank">Урок 4 </a>
+<p><a href="ai_1.htm">Урок 1 </a> | <a href="ai_2.htm" target="_blank"> Урок 2 </a>| <a href="ai_3.htm" target="_blank">Урок 3 </a> | <a href="ai_4.htm" target="_blank">Урок 4 </a> </p>
 <hr color=#1D338D size=5>
 <br>
 <H1 align=center> <font color=#1D338D><a name="begin">Adobe Illustrator: первые шаги</a></H1>
 <H3 color=#1D338D align=center><i>Урок 1</i></H3>
 <font color=#3862C7 size=-1>
-<P>Основные принципы работы в Illustrator</P>
-<P>&nbsp;&nbsp;&nbsp;Создание нового документа</P>
-<P>&nbsp;&nbsp;&nbsp;Панель инструментов</P>
-<P>&nbsp;&nbsp;&nbsp;Основные палитры</P>
-<P>&nbsp;&nbsp;&nbsp;Выделение объектов</P>
+<P><A Href="#Illustrator">Основные принципы работы в Illustrator</A></P>
+<P>&nbsp;&nbsp;&nbsp;<A Href="#документ">Создание нового документа</A></P>
+<P>&nbsp;&nbsp;&nbsp;<A Href="#инструмент">Панель инструментов</A></P>
+<P>&nbsp;&nbsp;&nbsp;<A Href="#палитра">Основные палитры</A></P>
+<P>&nbsp;&nbsp;&nbsp;<A Href="#объект">Выделение объектов</A></P>
 <P>&nbsp;&nbsp;&nbsp;<A Href="#gruppa">Группировка объектов</A></P>
 <font color=black size=+1>
 <P>Adobe Illustrator является одним из признанных лидеров среди программ 
@@ -50,8 +46,8 @@
 градиентной заливки. Но многое из всего перечисленного сделано несколько иначе, 
 еще существует немало иных возможностей, ориентированных именно на создание и 
 обработку векторных изображений. </P>
-<H2>Основные принципы работы в Illustrator</H2>
-<H3>Создание нового документа</H3>
+<H2><A name="Illustrator">Основные принципы работы в Illustrator</A></H2>
+<H3><A name="документ">Создание нового документа</A></H3>
 <P>Работа над картинкой начинается с создания нового документа, что происходит 
 обычным образом по команде <STRONG>File=&gt;New</STRONG> (Файл=&gt;Новый). При 
 этом в окне <STRONG>New Document</STRONG> (Новый документ; рис. 1) нужно сразу 
@@ -70,7 +66,7 @@
 <P><font size=-1><i>Рис. 1. Создание нового документа для Web</i></P>
 <IMG src="AI_1/2.jpg">
 <P><i>Рис. 2. Новый документ</i></P>
-<H3><font size=+1>Панель инструментов</H3>
+<H3><font size=+1><A name="инструмент">Панель инструментов</A></H3>
 <P>Панель инструментов программы Illustrator очень напоминает таковую в 
 Photoshop, и выбираются инструменты обычным образом. Под видимым на данный 
 момент инструментом может скрываться еще несколько, до которых нетрудно 
@@ -79,7 +75,7 @@ Photoshop, и выбираются инструменты обычным образом. Под видимым на данный
 <P>&nbsp;</P>
 <IMG src="AI_1/3.jpg">
 <P><font size=-1><i>Рис. 3. Серия инструментов для рисования графических примитивов</i></P>
-<H3><font size=+1>Основные палитры</H3>
+<H3><font size=+1><A name="палитра">Основные палитры</A></H3>
 <P>В программе Illustrator существует целая серия специализированных палитр, 
 которые могут быть открыты или закрыты и вызываются из списка палитр, 
 открывающегося при активизации команды <STRONG>Window</STRONG> (Окно). В числе 
@@ -163,7 +159,7 @@ Join</STRONG>.</P>
 Stroke, соответствующей данной обводке </i></P>
 <IMG src="AI_1/11.jpg">
 <P><font size=-1><i>Рис. 11. Пример линий с разной настройкой параметров Cap и Join</i></P>
-<H3><font size=+1>Выделение объектов</H3>
+<H3><font size=+1><A name="объект">Выделение объектов</A></H3>
 <P>Для выделения объектов в первую очередь служат инструменты 
 <STRONG>Selection</STRONG> (Выделение), <STRONG>Direct Selection</STRONG> 
 (Частичное выделение) и <STRONG>Group Selection</STRONG> (Групповое выделение). 
