--- a/занятие 2/AI_4.htm
+++ b/занятие 2/AI_4.htm
@@ -3,17 +3,17 @@
 <TITLE>Работа с векторными контурами в Adobe Illustrator | Обучение </TITLE>
 <META charset=windows-1251">
 <BODY bgcolor=#D8E7F4>
-<p>Урок 1 | Урок 2 | Урок 3 | Урок 4 </p>
+<p><a href="ai_1.htm" target="_blank">Урок 1 </a> | <a href="ai_2.htm" target="_blank"> Урок 2 </a>| <a href="ai_3.htm" target="_blank"> Урок 3 </a> | <a href="ai_4.htm" >Урок 4 </a> </p>
 <hr color=#1D338D size=5>
 <br>
 <H1 align=center><font color=#1D338D>Работа с векторными контурами в Adobe Illustrator</H1>
 <H3 color=#1D338D align=center><i>Урок 4</I></H3>
 <font color=#3862C7 size=-1>
-<p>Удаление опорных точек</P>
-<P>Разбиение контура</P>
-<P>Выравнивание опорных точек</P>
+<p><A Href="#удаление">Удаление опорных точек</A></P>
+<P><A Href="#разбиение">Разбиение контура</A></P>
+<P><A Href="#выравнивание">Выравнивание опорных точек</A></P>
 <font color=black size=+1>
-<H3>Удаление опорных точек</H3>
+<H3><A name="удаление">Удаление опорных точек</A></H3>
 <P>При необходимости неудачно созданные точки (или точки, оставшиеся от 
 удаленных контуров) можно удалить инструментом <STRONG>Delete Anchor Point 
 </STRONG>(Перо–), щелкая им по любой из точек контура. </P>
@@ -66,7 +66,7 @@ and Bloat</STRONG> (Фильтр=&gt;Искажение=&gt;Сморщивать и раздувать) со
 <IMG src="AI_4/8.jpg">
 <p><i>Рис. 8. Окончательный вид полученного изображения с множеством лишних опорных точек</I></P>
 <font size=+1>
-<H3>Разбиение контура</H3>
+<H3><A name="разбиение">Разбиение контура</A></H3>
 <P>Разбиение контура означает получение из одной опорной точки двух независимых 
 друг от друга точек, и осуществляется данная операция при помощи инструмента 
 <STRONG>Scissors</STRONG> (Ножницы). Технология разбиения контура проста: нужно 
@@ -112,7 +112,7 @@ Bloat </I></P>
 <IMG src="AI_4/16.jpg">
 <P><i>Рис. 16.Окончательный вид изображения, напоминающего снежинку </i></P>
 <font size=+1>
-<H3>Выравнивание опорных точек</H3>
+<H3><A name="выравнивание">Выравнивание опорных точек</A></H3>
 <P>Весьма часто возникает проблема размещения опорных точек контура строго по 
 горизонтали или по вертикали. Создайте, например произвольную ломаную (рис. 17). 
 Выделите три верхние опорные точки и воспользуйтесь командой 
@@ -154,5 +154,6 @@ Bloat </I></P>
 <P><I>Рис. 23. Настройка параметров фильтра ZigZag</I></P>
 <IMG src="AI_4/24.jpg">
 <P><I>Рис. 24. Окончательный вид пальмы</I></P>
+<p><font size=-1><A href=#top>В начало документа</a>
 </BODY>
 </HTML>
