--- a/Занятие 6/index4.html
+++ b/Занятие 6/index4.html
@@ -15,10 +15,10 @@
 <br>
 <b><font face="Arial" color="SteelBlue" > Имя </font></b>
 <HR color="Silver" size=2>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font face="Arial"size=-1 color="LightSlateGray">Имя</font>:<input type="text" name="name"><font face="Arial"size=-2 color="LightSlateGray">&nbsp;&nbsp;Допускаются только настоящие имя и фамилия.</font></p>
-<p><font face="Arial"size=-1 color="LightSlateGray">&nbsp;Фамилия</font>:<input type="text" name="name"><font face="Arial"size=-2 color="LightSlateGray">&nbsp;&nbsp;Остальные регистрации будут удаляться.</font></p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font face="Arial"size=-1 color="LightSlateGray">E-mail</font>:<input type="text" name="name"></p>
-<p>&nbsp;&nbsp;&nbsp;<font face="Arial"size=-1 color="LightSlateGray">Пароль</font>:<input type="text" name="name"></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font face="Arial"size=-1 color="LightSlateGray">Имя</font>:&nbsp;<input type="text" name="name"><font face="Arial"size=-2 color="LightSlateGray">&nbsp;&nbsp;Допускаются только настоящие имя и фамилия.</font></p>
+<p><font face="Arial"size=-1 color="LightSlateGray">&nbsp;Фамилия</font>:&nbsp;<input type="text" name="name"><font face="Arial"size=-2 color="LightSlateGray">&nbsp;&nbsp;Остальные регистрации будут удаляться.</font></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font face="Arial"size=-1 color="LightSlateGray">E-mail</font>:&nbsp;<input type="text" name="name"></p>
+<p>&nbsp;&nbsp;&nbsp;<font face="Arial"size=-1 color="LightSlateGray">Пароль</font>:&nbsp;<input type="text" name="name"></p>
 <br>
 <br>
 <b><font face="Arial" color="SteelBlue" > Образование </font></b>
@@ -32,7 +32,8 @@
 	<option>Германия</option>
   </select>
   </p>
-<p><font face="Arial"size=-1 color="LightSlateGray">&nbsp;&nbsp;&nbsp;Город:</font>
+  <table>
+<tr><td><p><font face="Arial"size=-1 color="LightSlateGray">&nbsp;Город</font>:
 <select name="select">
     <option>Москва</option>
 	<option>Минск</option>
@@ -40,7 +41,7 @@
 	<option>Варшава</option>
 	<option>Берлин</option>
   </select>
-  </p>
+  </p></td></tr></table>
  <font face="Arial"size=-2 color="LightSlateGray">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Город, где Вы учились в школе или вузе.</font>
  <br>
  <br>
@@ -69,7 +70,9 @@
   </p>
 <br>
  <br>
- &nbsp;&nbsp;&nbsp;&nbsp;<input type="submit" value="Зарегистрироваться"> </form>
- <p><font face="Arial"size=-2 color="LightSlateGray">Фактом регистрации Вы соглашаетесь с <A href="Пользовательским соглашением">Пользовательским соглашением</a>
+  <table>
+<tr><td>
+ &nbsp;&nbsp;&nbsp;&nbsp;<input type="submit" value="&nbsp;&nbsp;Зарегистрироваться&nbsp;&nbsp;"> </form></td></tr></table>
+<font face="Arial"size=-2 color="LightSlateGray">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Фактом регистрации Вы соглашаетесь с <A href="Пользовательским соглашением">Пользовательским соглашением</a>
 </body>
 </html>
