--- a/Занятие 3/new 3.html
+++ b/Занятие 3/new 3.html
@@ -1,23 +1,23 @@
 <HTML>
 <HEAD>
-<TITLE>Графика на веб-странице</title>
+<TITLE>Р“СЂР°С„РёРєР° РЅР° РІРµР±-СЃС‚СЂР°РЅРёС†Рµ</title>
 </HEAD>
 <BODY background="Texture/WB6.gif">
-<IMG SRC="Images/banner.jpg" width=800 height=123>
-<H1 align=center><font color=#0D20A7>На данной странице текст и изображения будут распологаться на фоне "обоев"</H1>
-<IMG SRC="Images/bar1.gif" width=100% height=5>
+<IMG SRC=Images/banner.jpg width=800 height=123>
+<H1 align=center><font color=#0D20A7>РќР° РґР°РЅРЅРѕР№ СЃС‚СЂР°РЅРёС†Рµ С‚РµРєСЃС‚ Рё РёР·РѕР±СЂР°Р¶РµРЅРёСЏ Р±СѓРґСѓС‚ СЂР°СЃРїРѕР»РѕРіР°С‚СЊСЃСЏ РЅР° С„РѕРЅРµ "РѕР±РѕРµРІ"</H1>
+<IMG SRC=Images/bar1.gif width=100% height=5>
 <DIV align=center>
-<IMG SRC="Images/Zima.jpg" border=1>
-<H3><I>Зима в лесу</H3></I></DIV>
-<IMG SRC="Images/bar1.gif" width=100% height=5>
-<H3 align=left> Взаимное расположение текста и изображения</H3>
-<FONT color="black">
-<P><IMG SRC="Images/BD1.gif" width=182 height=122>Ух! Эти забавные дети!</p>
+<IMG SRC=Images/Zima.jpg border=1>
+<H3><I>Р—РёРјР° РІ Р»РµСЃСѓ</I><H3></DIV>
+<IMG SRC=Images/bar1.gif width=100% height=5>
+<H3 align=left>Р’Р·Р°РёРјРЅРѕРµ СЂР°СЃРїРѕР»РѕР¶РµРЅРёРµ С‚РµРєСЃС‚Р° Рё РёР·РѕР±СЂР°Р¶РµРЅРёР№</H3>
+<Font color="black">
+<p><img src=Images/BD1.gif width=182 height=122>РђС…! Р­С‚Рё Р·Р°Р±Р°РІРЅС‹Рµ РґРµС‚Рё!</p>
 <HR color="blue">
-<P><IMG SRC="Images/BD2.gif" width=182 height=122 align=top>Ух! Эти забавные дети!</p>
+<p><img src=images/bd2.gif width=182 height=122 align=top>РђС…! Р­С‚Рё Р·Р°Р±Р°РІРЅС‹Рµ РґРµС‚Рё!</p>
 <HR color="blue">
-<P><IMG SRC="Images/BD3.gif" width=182 height=122 align=center>Ух! Эти забавные дети!</p>
+<p><img src=images/bd3.gif width=182 height=122 align=middle>РђС…! Р­С‚Рё Р·Р°Р±Р°РІРЅС‹Рµ РґРµС‚Рё!</p>
 <HR color="blue">
-<P><IMG SRC="Images/BD4.gif" width=182 height=122 align=right>Ух! Эти забавные дети!</p>
+<p><img src=images/bd4.gif width=182 height=122 align=right>РђС…! Р­С‚Рё Р·Р°Р±Р°РІРЅС‹Рµ РґРµС‚Рё!</p><br>
 </BODY>
-</HTML>
+</HTML> 
