--- a/Занятие 3/new 1.html
+++ b/Занятие 3/new 1.html
@@ -8,15 +8,15 @@
 <H1 align=center><font color=#4F584D>Колледж де Бург</H1>
 <font color="black">
 <IMG SRC=Images/AG4.gif width=100% height=3>
-<p><a href="images/parikm.jpg"><img src="images/parikm1.jpg" border=0 hspace=20 vspace=5 
+<p><a href="Images/Parikm.jpg"><img src="Images/Parikm1.jpg" border=0 hspace=20 vspace=5 
 alt="Увеличить изображение" align=middle title="Увеличить изображение"></a>
-<a href="images/stolar.jpg"><img src="images/stolar1.jpg" border=0 hspace=65 vspace=5 
+<a href="Images/Stolar.jpg"><img src="Images/Stolar1.jpg" border=0 hspace=65 vspace=5 
 alt="Увеличить изображение" align=middle title="Увеличить изображение"></a></p>
 <p>Кабинет по специальности "Парикмахер"&nbsp&nbsp&nbsp&nbsp&nbsp&nbspКабинет по специальности "Столяр"</p>
 <HR>
-<p><a href="images/Slesar.jpg"><img src="images/Slesar1.jpg" border=0 hspace=20 vspace=5 
+<p><a href="Images/Slesar.jpg"><img src="Images/Slesar1.jpg" border=0 hspace=20 vspace=5 
 alt="Увеличить изображение" align=middle title="Увеличить изображение"></a>
-<a href="images/Compclass.jpg"><img src="images/Compclass1.jpg" border=0 hspace=65 vspace=5 
+<a href="Images/Compclass.jpg"><img src="Images/Compclass1.jpg" border=0 hspace=65 vspace=5 
 alt="Увеличить изображение" align=middle title="Увеличить изображение"></a></p>
 Кабинет по специальности<br>
 "Слесарь механо-сборачных работ"&nbsp&nbsp&nbsp&nbsp&nbsp&nbspКабинет по специальности "Пользователь ПЭВМ"
