--- a/Занятие 3/new 1.html
+++ b/Занятие 3/new 1.html
@@ -2,12 +2,12 @@
 	<HEAD>
 		<TITLE>Организация графических гиперссылок</title>
 	</HEAD>
-	<BODY background="Texture/WB7.gif">
+	<BODY background="Texture/WB7.GIF">
 	
 	
 <H1 align=center><font color=#4F584D>Колледж де Бург</H1>
 <font color="black">
-<IMG SRC=Images/AG4.gif width=100% height=3>
+<IMG SRC=Images/AG4.GIF width=100% height=3>
 <p><a href="Images/Parikm.jpg"><img src="Images/Parikm1.jpg" border=0 hspace=20 vspace=5 
 alt="Увеличить изображение" align=middle title="Увеличить изображение"></a>
 <a href="Images/Stolar.jpg"><img src="Images/Stolar1.jpg" border=0 hspace=65 vspace=5 
